--- a/Settings.bundle/com.mono0926.LicensePlist.plist
+++ b/Settings.bundle/com.mono0926.LicensePlist.plist
@@ -84,6 +84,14 @@
 		</dict>
 		<dict>
 			<key>File</key>
+			<string>com.mono0926.LicensePlist/Kingfisher</string>
+			<key>Title</key>
+			<string>Kingfisher</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
 			<string>com.mono0926.LicensePlist/leveldb</string>
 			<key>Title</key>
 			<string>leveldb</string>
