Fix: 나눔명조 폰트 변경 (잘못된걸 가져왔었음)

--- a/Kabinett/Info.plist
+++ b/Kabinett/Info.plist
@@ -11,8 +11,7 @@
 		<string>Baskervville-Regular.otf</string>
 		<string>SourceHanSerifK-Regular.otf</string>
 		<string>SourceHanSerifK-Bold.otf</string>
-		<string>MaruBuriot-Regular.otf</string>
-		<string>MaruBuriot-Bold.otf</string>
+		<string>NanumMyeongjo.otf</string>
 	</array>
 </dict>
 </plist>
